--- a/BabyNoggin/sass/style.scss
+++ b/BabyNoggin/sass/style.scss
@@ -1162,6 +1162,73 @@ div.inside, div.outside {
   width: 100%;
 }
 
+// survey pages
+
+.survey-pages .survey-header h2 {
+  @include description-header;
+  padding: 15vw 0 5vw;
+}
+
+// survey test page-wrappe
+
+#survey-test-page .test-wrapper {
+  padding: 0 12vw;
+  margin-bottom: 15vw;
+}
+
+#survey-test-page .form-row {
+  min-height: 15vw;
+  border: 1px solid $border-color;
+  margin-bottom: 27px;
+  border-radius: 5px;
+}
+
+// radio styles
+
+#survey-test-page .radio-wrapper {
+  height: 3.3rem;
+  padding-left: 1.6rem;
+}
+
+#survey-test-page [type="radio"] + label:before,
+#survey-test-page [type="radio"] + label:after {
+    width: 73vw;
+    height: 12.3vw;
+    margin-top: 0.17rem;
+}
+
+#survey-test-page [type="radio"]:not(:checked) + label,
+#survey-test-page [type="radio"]:checked + label {
+    padding: 0.5rem 0.66rem 0 1.65rem;
+    //font-size: 0.8rem;
+    //text-transform: uppercase;
+    //margin-right: 0.8rem;
+    width: 69vw;
+    text-align: center;
+}
+
+#survey-test-page [type="radio"]:not(:checked) + label:before {
+    border-radius: 5px;
+    border: 1px solid #a0ce55;
+    background-color: #a0ce55;
+    z-index: -1;
+}
+
+#survey-test-page [type="radio"]:checked + label:after {
+    border-radius: 5px;
+    border: 1px solid #a0ce55;
+    background-color: #a0ce55;
+    z-index: -1;
+    transform: scale(1.02);
+    box-sizing: border-box;
+}
+
+#survey-test-page [type="radio"]:checked + label,
+#survey-test-page [type="radio"]:not(:checked) + label {
+  color: #ffffff;
+  z-index: 1;
+}
+
 // media query styles
 
 @media (min-width: $small) {
@@ -1182,6 +1249,22 @@ div.inside, div.outside {
 
   #baby-tracker-page .list-tracking li {
     background-size: 6.5%;
+  }
+
+  // test page
+
+  #survey-test-page .form-row:nth-child(1) {
+    padding: 1px 0;
+  }
+
+  #survey-test-page [type="radio"]:not(:checked) + label,
+  #survey-test-page [type="radio"]:checked + label {
+      padding: 0.7rem 0.66rem 0 1.65rem;
+  }
+
+  #survey-test-page [type="radio"] + label:before,
+  #survey-test-page [type="radio"] + label:after {
+      width: 73.2vw;
   }
 
 }
@@ -1227,6 +1310,12 @@ div.inside, div.outside {
     top: 2.6vw;
   }
 
+  // test pages
+
+  #survey-test-page .form-row {
+    padding: 1px;
+  }
+
 }
 
 @media (min-width: $xsmall) and (max-width:$xsmall-landscape - 1) and (orientation: landscape){
@@ -1246,6 +1335,17 @@ div.inside, div.outside {
 .calendar-wrapper .lines,
 .tracker-wrapper .lines {
   top: 20.5vw;
+}
+
+// test pages
+
+#survey-test-page .content .form-row {
+  padding: 1px 2px;
+}
+
+#survey-test-page [type="radio"]:not(:checked) + label,
+#survey-test-page [type="radio"]:checked + label {
+    padding: 0.8rem 0.66rem 0 1.65rem;
 }
 
 }
@@ -1309,6 +1409,18 @@ div.inside, div.outside {
     font-size: 1.1rem;
 }
 
+// test pages
+
+#survey-test-page [type="radio"] + label:before,
+#survey-test-page [type="radio"] + label:after {
+    width: 74vw;
+}
+
+#survey-test-page [type="radio"]:not(:checked) + label,
+#survey-test-page [type="radio"]:checked + label {
+    padding: 0.9rem 0.66rem 0 1.65rem;
+}
+
 }
 
 @media (min-width: $medium) and (max-width:$xmedium - 1) {
@@ -1351,6 +1463,12 @@ div.inside, div.outside {
 // track styles
 .tracker-wrapper .list-menu li {
   padding: 0.5vw 5.2vw;
+}
+
+// test style
+
+#survey-test-page .content .form-row {
+    padding: 3px 1px;
 }
 
 }
@@ -1440,6 +1558,23 @@ div.inside, div.outside {
     font-size: 1.1rem;
 }
 
+// test pages
+
+#survey-test-page .content .form-row {
+    padding: 3px 6px;
+    border-radius: 10px;
+}
+
+#survey-test-page [type="radio"]:not(:checked) + label:before,
+#survey-test-page [type="radio"]:checked + label:after {
+    border-radius: 7px;
+}
+
+#survey-test-page [type="radio"]:not(:checked) + label,
+#survey-test-page [type="radio"]:checked + label {
+    padding: 1rem 0.66rem 0 1.65rem;
+}
+
 }
 
 @media (min-width: $xmedium) and (max-width:$large - 1)and (orientation: landscape) {
@@ -1449,6 +1584,13 @@ div.inside, div.outside {
   .tracker-wrapper .lines {
     top: 21vw;
 }
+
+//test pages
+
+  #survey-test-page [type="radio"] + label:before,
+  #survey-test-page [type="radio"] + label:after {
+      width: 73vw;
+  }
 
 }
 
@@ -1539,6 +1681,23 @@ div.inside, div.outside {
 
   #milestone-index-page .crossing-eyes-test a {
       font-size: 1.3rem;
+  }
+
+  // test profile-page
+
+  #survey-test-page .content .form-row {
+      padding: 7px 9px;
+  }
+
+  #survey-test-page [type="radio"] + label:before,
+  #survey-test-page [type="radio"] + label:after {
+      width: 73.2vw;
+  }
+
+  #survey-test-page [type="radio"]:not(:checked) + label,
+  #survey-test-page [type="radio"]:checked + label {
+      padding: 1.5rem 0.66rem 0 1.65rem;
+      width: 72vw;
   }
 
 }
